@@ -1,5 +1,13 @@
 2001-05-08  Martin Baulig  <baulig@suse.de>
 
+	* gnome-selector-client.h
+	(GnomeSelectorClientAsyncHandle): New typedef.
+	(GnomeSelectorClientAsyncFunc): New typedef.
+	(gnome_selector_client_get_uri): New function.
+	(gnome_selector_client_set_uri): New function.
+
+2001-05-08  Martin Baulig  <baulig@suse.de>
+
 	* gnome-selectorP.h: Removed.
 	* gnome-selector.[ch]: Removed, this is now in libgnome.
 	* gnome-file-selector.[ch]: Removed, this is now in libgnome.
